# BTIFIT

./: .gitignore  00.md  Dockerfile  README.md  app.py  pipeline.py  pyproject.toml  requirements.txt  run.py  setup.py
BotTrainer/: # Module 1 — Utility functions (no API k.md  .env.example  .gitignore  __init__.py  __main__.py  api.py  app.py  bootstrap.py  config.py  pipeline.py  requirements.txt  styles.py
BotTrainer/data/: eval_dataset.json  intents.json
BotTrainer/modules/: __init__.py  data_loader.py  entity_extractor.py  evaluator.py  exceptions.py  intent_classifier.py  llm_client.py  utils.py
data/: eval_dataset.json  intents.json
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatArea.css  ChatArea.jsx  MessageBubble.css  MessageBubble.jsx  Sidebar.css  Sidebar.jsx
modules/: __init__.py  data_loader.py  entity_extractor.py  evaluator.py  intent_classifier.py  llm_client.py  utils.py
prompts/: entity_prompt.txt  intent_prompt.txt
tests/: conftest.py  test_entity_extractor.py  test_evaluator.py  test_intent_classifier.py  test_llm_client.py  test_utils.py
