[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "BotTrainer"
version = "1.0.0"
description = "LLM-Based NLU Model Trainer & Evaluator for Chatbots"
readme = "BotTrainer/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "google-genai>=1.0.0",
    "streamlit>=1.42.0",
    "kaggle>=1.7.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "tqdm>=4.66.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
bottrainer = "BotTrainer.pipeline:main"
bottrainer-setup = "BotTrainer.bootstrap:main"

[tool.setuptools.packages.find]
include = ["BotTrainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
